; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_teap.c_eap_teap_process_version.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_teap.c_eap_teap_process_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_teap_data = type { i32, i32 }

@MSG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"EAP-TEAP: Peer used unknown TEAP version %u\00", align 1
@MSG_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [50 x i8] c"EAP-TEAP: peer ver=%u, own ver=%u; use version %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eap_sm*, i8*, i32)* @eap_teap_process_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eap_teap_process_version(%struct.eap_sm* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.eap_sm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.eap_teap_data*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.eap_teap_data*
  store %struct.eap_teap_data* %10, %struct.eap_teap_data** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 1
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @MSG_INFO, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 (i32, i8*, i32, ...) @wpa_printf(i32 %14, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %15)
  store i32 -1, i32* %4, align 4
  br label %38

17:                                               ; preds = %3
  %18 = load i32, i32* %7, align 4
  %19 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %20 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp slt i32 %18, %21
  br i1 %22, label %23, label %34

23:                                               ; preds = %17
  %24 = load i32, i32* @MSG_DEBUG, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %27 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 (i32, i8*, i32, ...) @wpa_printf(i32 %24, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0), i32 %25, i32 %28, i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %33 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  br label %34

34:                                               ; preds = %23, %17
  %35 = load i32, i32* %7, align 4
  %36 = load %struct.eap_teap_data*, %struct.eap_teap_data** %8, align 8
  %37 = getelementptr inbounds %struct.eap_teap_data, %struct.eap_teap_data* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  store i32 0, i32* %4, align 4
  br label %38

38:                                               ; preds = %34, %13
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @wpa_printf(i32, i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
